# CppTestGround

./: .gitignore  CMakeLists.txt  README.md
PowerBall/: .gitignore
PowerBall/PowerBall/: PowerBall.cpp
bazel_demo/testproject/: .gitignore  WORKSPACE
c++17/new_features/: .gitignore  new_features.sln
cpp17Test/: README.md
cpp17Test/Cpp17Test/: .gitignore  Cpp17Test.pro  any_tests.cpp  basic_catch_tests.cpp  catch.hpp  filesystem_tests.cpp  list_tests.cpp  main.cpp  main_tests.cpp  monostate.cpp  node_tests.cpp  optional_tests.cpp  random_number_tests.cpp  singly_linkedlist_tests.cpp  stringview_tests.cpp  struct_bindings_tests.cpp  variant_tests.cpp  vector_tests.cpp
cpp17Test/MathTest/: MathTest.pro  main.cpp  matrices.cpp  matrices.h  utils.h  vectors.cpp  vectors.h
cpp17Test/QuickTest/: QuickTest.pro  main.cpp  main_generic_func_intro.cpp  main_iterator_ranges_basics.cpp  main_monomorphic_functions.cpp  main_samples.cpp  main_simple_vector.cpp  main_template.cpp  utils.h
ctci/Practice/: .gitignore  Practice.sln  main.cpp  (+1 more)
hackerrank/: codesprint4_challenges.cpp  cpp_30days_challenges.cpp  domain_algorithms_challenges.cpp  domain_cpp_challenges.cpp  domain_datastructures_challenges.cpp  hacker_rank_challenges.cpp  hacker_rank_challenges.h  weekofcode21_challenges.cpp
src/: algorithms_demo.cpp  algorithms_demo.h  common_utilities.cpp  common_utilities.h  explicit_initialization_demo.cpp  explicit_initialization_demo.h  initializer_demo.cpp  initializer_demo.h  lamda_demo.cpp  lamda_demo.h  main.cpp  precompiled.cpp  precompiled.h  range_based_for_loop_demo.cpp  range_based_for_loop_demo.h  sandbox.cpp  sandbox.h  template_demo.cpp  template_demo.h  unordered_maps_multimaps_demo.cpp  unordered_maps_multimaps_demo.h  unordered_sets_multisets_demo.cpp  unordered_sets_multisets_demo.h  variadic_templates_demo.cpp  variadic_templates_demo.h
(+191 files in other folders)
